code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_9.wast
(assert_invalid
  (module (func $type-unconsumed-result (unreachable) (i32.eqz)))
  "type mismatch"
)